[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "pyntree"
version = "1.2.1"
description = "pyntree is a python package which allows you to easily and syntactically save your data. Not only that, it also lets you save in multiple formats, and even serialize and compress data by merely changing a few characters."
readme = "README.md"
authors = [{ name = "jvadair", email = "dev@jvadair.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
keywords = ["database", "pyntree", "pyndb", "python", "encryption", "crypto", "cryptography", "security"]
requires-python = ">=3.7.3"

[project.optional-dependencies]  # Format: pip3 install pyntree[dev]
lz4 = ["compress_pickle[lz4]"]
dev = ["pipreqs", "build", "twine", "requests"]
encryption = ["cryptography", "argon2-cffi"]

[project.urls]
Homepage = "https://github.com/jvadair/pyntree"
Documentation = "https://pen.jvadair.com/books/pyntree"

[tool.setuptools]
packages = ['pyntree']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
